Add Tracker and Navigator, update CDAP and Hydrator (#7)
* Add Tracker and Navigator, update CDAP and Hydrator

* Update per PR feedback